--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -411,5 +411,27 @@ align-self: center;
     padding: 3.5rem 1.5rem ;
     background-color: var(--body-color);
     border-radius: .5rem;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+}
+.new__sneaker-img{
+    width: 220px;
+}
+.new__sneaker-overlay{
+    position: absolute;
+    left: 0;
+    bottom: -100%;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(138, 138, 138, .3);
+    transition: .3s;
+}
+
+.new__sneaker-card:hover .new__sneaker-overlay{
+    bottom: 0;
 }
 
