--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -434,4 +434,37 @@ align-self: center;
 .new__sneaker-card:hover .new__sneaker-overlay{
     bottom: 0;
 }
-
+/*newsletter*/
+.newsletter__container{
+    background-color: var(--black-color);
+    color: var(--white-color);
+    padding: 2rem .5rem;
+    border-radius: .5rem;
+    text-align: center;
+}
+.newsletter__title{
+    font-size: var(--big-font-size);
+    margin-bottom: var(--mb-2);
+}
+.newsletter__description{
+    margin-bottom: var(--mb-5);
+}
+.newsletter__subscribe{
+    display: flex;
+    column-gap: .5rem;
+    background-color: var(--white-color);
+    padding: .5rem;
+    border-radius: .5rem;
+}
+.newsletter__input{
+    outline: none;
+    border: none;
+    width: 90%;
+    font-size: var(--normal-font-size);
+}
+.newsletter__input::placeholder{
+    color:var(--black-color);
+    font-family: var(--body-font);
+    font-size: var(--normal-font-size);
+    font-weight: var(--font-semi-bold);
+}
