--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -85,6 +85,7 @@ body.dark-theme{
    --scroll-thumb-color: hsl(var(--hue-color), 12%, 80%);
 }
 
+
 /*button dark/light*/
 .nav__btns{
     display: flex;
@@ -109,11 +110,12 @@ html{
     scroll-behavior: smooth;
 }
 body{
+    background-color: var(--white-color);
     margin: var(--header-height) 0 0 0;
     font-family: var(--body-font);
     font-size: var(--normal-font-size);
     font-weight: var(--font-medium);
-    color: var(--blck-color);
+    color: var(--black-color);
     line-height: 1.6;
 }
 h1,h2,h3,p,ul{
@@ -126,6 +128,9 @@ ul{
 a{
     text-decoration: none;
     color: var(--black-color);
+}
+a:hover{
+    color: var(--first-color);
 }
 img{
     max-width: 100%;
@@ -224,8 +229,8 @@ img{
 }
 /*change color header*/
 
-.scoll-header{
-    background-color: var(--white-color);
+.scroll-header{
+    background-color: var(--body-color);
     box-shadow: 0 2pc 4pc rgba(0, 0, 0, .1);
 }
 
@@ -246,7 +251,7 @@ align-self: center;
 .home__shape{
     width: 220px;
     height: 220px;
-    background-color: var(--black-color);
+    background-color: var(--first-color);
     border-radius: 50%;
 }
 .home__img{
@@ -273,7 +278,7 @@ align-self: center;
 /*button*/
 .button{
     display: inline-block;
-    background-color: var(--black-color);
+    background-color: var(--first-color);
     color: var(--white-color) ;
     padding: 1.125rem 2rem;
     font-weight: var(--font-medium);
@@ -281,13 +286,17 @@ align-self: center;
     transition: .3s;
 }
 .button:hover{
+    color: var(--first-color-lighter);
     transform: translateY(-.25rem);
 }
 .button-light{
     display: inline-flex;
-    color: var(--black-color);
+    color: var(--first-color);
     font-weight: var(--font-bold);
     align-items: center;
+}
+.button-light:hover{
+    color: var(--first-color-lighter);
 }
 .button-icon{
     font-size: 1.25rem;
@@ -476,10 +485,11 @@ align-self: center;
     bottom: 0;
 }
 /*newsletter*/
+
 .newsletter__container{
-    background-color: var(--black-color);
+    background-color: var(--first-color);
     color: var(--white-color);
-    padding: 2rem .5rem;
+    padding: 2rem .2rem;
     border-radius: .5rem;
     text-align: center;
 }
@@ -490,10 +500,11 @@ align-self: center;
 .newsletter__description{
     margin-bottom: var(--mb-5);
 }
+
 .newsletter__subscribe{
     display: flex;
     column-gap: .5rem;
-    background-color: var(--white-color);
+    background-color: var(--body-color);
     padding: .5rem;
     border-radius: .5rem;
 }
@@ -504,7 +515,7 @@ align-self: center;
     font-size: var(--normal-font-size);
 }
 .newsletter__input::placeholder{
-    color:var(--black-color);
+    color:var(--first-color-lighter);
     font-family: var(--body-font);
     font-size: var(--normal-font-size);
     font-weight: var(--font-semi-bold);
