--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -12,9 +12,11 @@
 /*color*/
 
 /*change favorite color*/
+/*  
 --hue-color: 250; /*Purple 250 - Green 142 - Blue 230 - Pink 340*/
 
-   /* HSL color mode */
+    /*HSL color mode 
+ /*
    --first-color: hsl(var(--hue-color), 69%, 61%) ;
    --first-color-second:hsl(var(--hue-color), 69%, 61%) ;
    --first-color-alt: hsl(var(--hue-color), 57%, 53%);
@@ -27,7 +29,23 @@
    --white-color: #fff;
    --scroll-bar-color: hsl(var(--hue-color), 12%, 90%);
    --scroll-thumb-color: hsl(var(--hue-color), 12%, 80%);
+*/
+/*base 168°, 55%, 77%*/
 
+--hue-color: 168; /*Purple 250 - Green 142 - Blue 230 - Pink 340*/
+
+   --first-color: hsl(var(--hue-color), 55%, 77%) ;
+   --first-color-second:hsl(var(--hue-color), 69%, 61%) ;
+   --first-color-alt: hsl(var(--hue-color), 57%, 53%);
+   --first-color-lighter: hsl(var(--hue-color), 92%, 85%);
+   --black-color: hsl(var(--hue-color), 8%, 15%);
+   --black-normal-color: hsl(var(--hue-color), 8%, 45%);
+   --black-light-color: hsl(var(--hue-color), 8%, 65%);
+   --input-color: hsl(var(--hue-color), 70%, 96%) ;
+   --body-color: hsl(var(--hue-color), 60%, 99%);
+   --white-color: #fff;
+   --scroll-bar-color: hsl(var(--hue-color), 12%, 90%);
+   --scroll-thumb-color: hsl(var(--hue-color), 12%, 80%);
 
 /*Font and typography*/
 --body-font: 'Poppins', sans-serif;
@@ -56,6 +74,7 @@
 
 /*rotable img*/
 --rotage-img: rotate(-30deg);
+
 }
 
 /* Font size for large devices */
@@ -93,12 +112,12 @@ body.dark-theme{
 }
 .change__theme{
     font-size: 1.25rem;
-    color: var(--black-color);
+    color: var(--first-color);
     margin-right: 1rem;
     cursor: pointer;
 }
 .change__theme:hover{
-    color: var(--first-color);
+    color: var(--black-color);
 }
 
 /*base*/
@@ -136,6 +155,12 @@ img{
     max-width: 100%;
     height: auto;
     display: block;
+}
+i{
+    color:var(--first-color)
+}
+i:hover{
+    color: var(--black-color);
 }
 /*class css*/
 
@@ -255,11 +280,16 @@ align-self: center;
     border-radius: 50%;
 }
 .home__img{
-    position: absolute;
+    /*-position: absolute;
     top: 1.5rem;
     max-width: initial;
     width: 275px;
-    transform: var(--rotage-img);
+    transform: var(--rotage-img);*/
+    position: absolute;
+    top: -3.5rem;
+    /*max-width: initial;*/
+    width: 475px;
+   
 }
 .home__new{
     display: block;
@@ -324,7 +354,7 @@ align-self: center;
 .sneaker__sale{
     position: absolute;
     left: .5rem;
-    background-color: var(--black-color);
+    background-color: var(--first-color);
     color: var(--white-color);
     padding: .25rem .5rem;
     border-radius: .25rem;
@@ -336,7 +366,7 @@ align-self: center;
     width: 220px;
     margin-top: var(--mb-3);
     margin-bottom: var(--mb-6);
-    transform: var(--rotage-img);
+    /*transform: var(--rotage-img);*/
     filter: drop-shadow(0 12px 8px rgba(0,0,0,.2));
 }
 .sneaker__name, .sneaker__price{
@@ -424,7 +454,7 @@ align-self: center;
 
 }
 .offer__img{
-    width: 150px;
+    width: 450px;
 }
 /*new collection*/
 .new__container{
@@ -603,12 +633,12 @@ align-self: center;
         width: 376px;
         height: 376px;
     }
-    .home__img{
+    /*.home__img{
         width: 470px;
         top: 3.5rem;
         right: 0;
         left: -3rem;
-    }
+    }*/
     .newsletter__container{
         grid-template-columns: max-content max-content;
         justify-content: center;
@@ -647,4 +677,31 @@ align-self: center;
         margin-bottom: var(--mb-6);
     }
 
+}
+
+@media screen and (max-width: 768px){
+
+     .home__img{
+    position: absolute;
+    top: -3.5rem;
+    /*max-width: initial;*/
+    width: 255px;
+   
+    /*    width: 470px;
+        top: 3.5rem;
+        right: 0;
+        left: -3rem;*/
+    }
+    
+
+}
+
+@media screen and (max-width: 768px){
+    .offer__container{
+        grid-template-columns:none;
+    }
+    .offer__data{
+        text-align: center;
+        /*padding: 4rem 0 1.5rem;*/
+    }
 }
